# gamecode-desktop

./: "hello.txt"  .gitignore  AWS_BEDROCK_INTEGRATION.md  Cargo.toml  README.md  VISUALIZATION.md  content="Hello from AWS Bedrock and Claude!"
.github/workflows/: rust-ci.yml
src/: app.rs  main.rs
src/agent/: app_recursive_processor.rs  context.rs  manager.rs  mod.rs
src/agent/backends/: bedrock.rs  mod.rs
src/agent/tools/: executor.rs  filesystem.rs  mod.rs  registry.rs  types.rs
src/core/: agent.rs  mod.rs  state.rs  tools.rs
src/examples/: bedrock_test.rs  mod.rs
src/ui/: layout.rs  mod.rs
src/ui/editor/: code_editor.rs  input.rs  journal.rs  mod.rs  syntax_ext.rs
src/visualization/: animations.rs  components.rs  mod.rs  systems.rs
