[package]
name = "gamecode"
version = "0.1.1"
edition = "2024"
description = "AI assistant using MCP and Game and Text UIs"
license = "MIT"
authors = ["Ed Sweeney <ed@onextent.com>"]

[dependencies]
# Bevy for visualization
bevy = "0.12.1" # Going back to a known working version
 
# UI components - use exact versions known to work together
bevy_egui = "0.23.0" # Compatible with Bevy 0.12
egui = "0.24.1" # Compatible with bevy_egui 0.23
egui_extras = "0.24.2" # Keep in sync with egui

# Agent and LLM requirements
aws-config = "0.55"
aws-sdk-bedrockruntime = "1.87"
tokio = { version = "1.32", features = ["full"] }
async-trait = "0.1"

# Core functionality
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"

# Utilities
regex = "1.9"
once_cell = "1.18"
directories = "5.0"
tracing = "0.1"
tracing-subscriber = "0.3"
rand = "0.8"
