[package]
name = "gamecode"
version = "0.1.1"
edition = "2024"
description = "AI assistant using MCP and Game and Text UIs"
license = "MIT"
authors = ["Ed Sweeney <ed@onextent.com>"]

[dependencies]
# Bevy for visualization
bevy = "0.15" # Upgrading to Bevy 0.15
 
# UI components - version compatible with Bevy 0.15
bevy_egui = "0.33" # Compatible with Bevy 0.15
egui = "0.31" # Keep in sync with bevy_egui
egui_extras = "0.32" # Keep in sync with egui

# Agent and LLM requirements
aws-config = "1.6"
aws-sdk-bedrockruntime = "1.87"
uuid = { version = "1.8", features = ["v4"] }
aws-smithy-types = "1.1"
tokio = { version = "1.32", features = ["full"] }
async-trait = "0.1"

# Core functionality
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "2.0"

# Utilities
regex = "1.9"
once_cell = "1.18"
directories = "6.0"
tracing = "0.1"
tracing-subscriber = "0.3"
rand = "0.9"
futures = "0.3"
